updated manifest.json, updated extension-events to be persistent on tab navigation

--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,5 @@
   "web_accessible_resources": [
     "assets/icons/logo.webp"
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-inline'; object-src 'self'"
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
