--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["assets/js/content-script.js"]
+      "js": ["assets/js/content-scripts/content-script.js", "assets/js/content-scripts/monitor-script.js"]
     }
   ],
   "background": {
