--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["assets/js/content-scripts/content-script.js", "assets/js/content-scripts/monitor-script.js", "assets/js/content-scripts/obfuscation/javascript-obfuscator.js"]
+      "js": ["assets/js/content-scripts/content-script.js", "assets/js/content-scripts/monitor-script.js", "assets/js/content-scripts/obfuscation/javascript-obfuscator.js", "assets/js/content-scripts/obfuscation/javascript-obfuscator-minimal-chars.js"]
     }
   ],
   "background": {
